Добавлен тег вьюпорт
переделана шапка

--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -11,8 +11,8 @@
 <body>
 	<header class="main-header">
 		<div class="main-header__content-wrapper">
-			<a href="#" class="version">Полная версия сайта</p>
-			<a href="#" class="delivery">Доставка и контакты</a>
+			<a href="#" class="version">Полная версия</br>сайта</p>
+			<a href="#" class="delivery">Доставка</br>и контакты</a>
 			<div class="social-header social">
 				<a href="#" class="social__vk"></a>
 				<a href="#" class="social__instagram"></a>
@@ -325,7 +325,7 @@
 
 				<a href="#" class="category-item">
 					<img src="images/cart-1.png" alt="Фото товара" class="category-item__image" width="100%">
-					<h3 class="category-item__title">ПепперПеппер</h3>
+					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
