--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -325,7 +325,7 @@
 
 				<a href="#" class="category-item">
 					<img src="images/cart-1.png" alt="Фото товара" class="category-item__image" width="100%">
-					<h3 class="category-item__title">Пеппер</h3>
+					<h3 class="category-item__title">Пеппер rthrthr thrth</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
@@ -460,7 +460,7 @@
 			<p class="set-advert">Превосходное качество и быстрая доставка.<br>Выберите нужный товар<br>и оформите покупку.</p>
 			<button class="set-button button">В корзину весь набор</button>
 			<span class="set-choise">или возьмите один</span>
-			<img src="images/icons/arrow.png" width="20px" alt="Стрелка" class="set-arrow">
+			<img src="images/icons/arrow.png" width="10px" alt="Стрелка" class="set-arrow">
 			<div class="set-button-wraper">
 				<button class="set-button--left slider-button--left">
 					<span class="slider-button__paint--left"></span>
@@ -782,7 +782,7 @@
 				<a href="#" class="social__instagram"></a>
 			</div>
 			<a href="#" class="adout">О нас</a>
-			<a href="#" class="policy">Политика конфеденциальности</a>
+			<a href="#" class="policy">Политика</br>конфеденциальности</a>
 			<a href="#" class="backup">Обмен и возврат</a>
 			<a href="#" class="map">Карта сайта</a>
 			<a href="#" class="contact">Контакты</a>
