--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -11,8 +11,12 @@
 <body>
 	<header class="main-header">
 		<div class="main-header__content-wrapper">
-			<a href="#" class="version">Полная версия</br>сайта</p>
-			<a href="#" class="delivery">Доставка</br>и контакты</a>
+			<a href="#" class="version">
+				<span class="version__span">Полная версия сайта</span>
+			</a>
+			<a href="#" class="delivery">
+				<span class="delivery__span">Доставка и контакты</span>
+			</a>
 			<div class="social-header social">
 				<a href="#" class="social__vk"></a>
 				<a href="#" class="social__instagram"></a>
@@ -350,6 +354,15 @@
 					</p>
 				</a>
 
+				<a href="#" class="category-item">
+					<img src="images/cart-3.png" alt="Фото товара" class="category-item__image" width="100%">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</a>
+
 			</div>
 		</section>
 		<section class="discount">
@@ -457,7 +470,11 @@
 		<section class="set">
 			<h2 class="set-tittle visually-hidden">Готовые наборы</h2>
 			<p class="set-declaration">Выберите Ваш товар</p>
-			<p class="set-advert">Превосходное качество и быстрая доставка.<br>Выберите нужный товар<br>и оформите покупку.</p>
+			<p class="set-advert">
+				<span class="set-advert__span">
+				Превосходное качество и быстрая доставка. Выберите нужный товар и оформите покупку.	
+				</span>
+			</p>
 			<button class="set-button button">В корзину весь набор</button>
 			<span class="set-choise">или возьмите один</span>
 			<img src="images/icons/arrow.png" width="10px" alt="Стрелка" class="set-arrow">
@@ -704,6 +721,15 @@
 					</p>
 				</a>
 
+				<a href="#" class="category-item">
+					<img src="images/cart-1.png" alt="Фото товара" class="category-item__image" width="100%">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</a>
+
 			</div>
 		</section>
 		<section class="quote">
@@ -738,6 +764,24 @@
 					<span class="quote-cart__icon"></span>
 				</div>
 
+				<div class="quote-cart">
+					<div class="quote-cart__image-wrapper">
+						<img src="images/cart-3.png" alt="Фото пользователя" class="quote-cart__image" width="100%">
+					</div>
+					<span class="quote-cart__name">Петя</span>
+					<span class="qoute-cart__text">Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла. Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла.</span>
+					<span class="quote-cart__icon"></span>
+				</div>
+
+				<div class="quote-cart">
+					<div class="quote-cart__image-wrapper">
+						<img src="images/cart-3.png" alt="Фото пользователя" class="quote-cart__image" width="100%">
+					</div>
+					<span class="quote-cart__name">Петя</span>
+					<span class="qoute-cart__text">Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла. Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла.</span>
+					<span class="quote-cart__icon"></span>
+				</div>
+
 			</div>
 		</section>
 		<section class="blog">
@@ -753,6 +797,18 @@
 
 				<a href="#" class="blog-cart">
 					<img src="images/cart-1.png" alt="Фото статьи" class="blog-cart__image" width="100%">
+					<h3 class="blog-cart__title">Название статьи</h3>
+					<p class="blog-cart__data">10.03.2476</p>
+				</a>
+
+				<a href="#" class="blog-cart">
+					<img src="images/cart-2.png" alt="Фото статьи" class="blog-cart__image" width="100%">
+					<h3 class="blog-cart__title">Название статьи</h3>
+					<p class="blog-cart__data">10.03.2476</p>
+				</a>
+
+				<a href="#" class="blog-cart">
+					<img src="images/cart-2.png" alt="Фото статьи" class="blog-cart__image" width="100%">
 					<h3 class="blog-cart__title">Название статьи</h3>
 					<p class="blog-cart__data">10.03.2476</p>
 				</a>
