--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -134,7 +134,7 @@
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
 						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<img src="images/cart-2.png" alt="" class="main-navigation__accent-image" width="364">
 							<span class="main-navigation__accent-signature"></span>
 						</li>
 					</ul>
@@ -166,7 +166,7 @@
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
 						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<img src="images/cart-1.png" alt="" class="main-navigation__accent-image" width="364">
 							<span class="main-navigation__accent-signature"></span>
 						</li>
 					</ul>
@@ -198,7 +198,7 @@
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
 						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<img src="images/cart-3.png" alt="" class="main-navigation__accent-image" width="364">
 							<span class="main-navigation__accent-signature"></span>
 						</li>
 					</ul>
@@ -230,7 +230,7 @@
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
 						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<img src="images/cart-3.png" alt="" class="main-navigation__accent-image" width="364">
 							<span class="main-navigation__accent-signature"></span>
 						</li>
 					</ul>
@@ -262,7 +262,7 @@
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
 						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<img src="images/cart-2.png" alt="" class="main-navigation__accent-image" width="364">
 							<span class="main-navigation__accent-signature"></span>
 						</li>
 					</ul>
@@ -294,7 +294,7 @@
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
 						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<img src="images/cart-1.png" alt="" class="main-navigation__accent-image" width="364">
 							<span class="main-navigation__accent-signature"></span>
 						</li>
 					</ul>
@@ -312,7 +312,7 @@
 					<span class="navigation-button__paint"></span>
 				</button>
 				<button class="search-button"></button>
-				<button class="filter-button"></button>	
+				<button class="filter-button hidden"></button>	
 
 			</div>
 		</section>
