--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -312,7 +312,7 @@
 					<span class="navigation-button__paint"></span>
 				</button>
 				<button class="search-button"></button>
-				<button class="filter-button hidden"></button>	
+				<button class="filter-button"></button>	
 
 			</div>
 		</section>
@@ -847,5 +847,6 @@
 		<span class="copy">&copy; Copyrights 2019</span>
 	</footer>
 	<script src="js/sistem.js"></script>
+	<script src="js/server.js"></script>
 </body>
 </html>
