--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -55,8 +55,8 @@
 			<nav class="user-navigation">
 				<a href="#" class="user-navigation__login user-navigation__item"></a>
 				<a href="#" class="user-navigation__likes user-navigation__item"></a>
-				<a href="#" class="user-navigation__basket user-navigation__item">
-					<span class="user-navigation__value user-navigation__item">12</span>
+				<a href="basket.php" class="user-navigation__basket user-navigation__item">
+					<span class="user-navigation__value user-navigation__item"></span>
 				</a>
 				<div class="user-navigation__user-menu">
 
@@ -686,5 +686,6 @@
 	<script src="js/sistem.js"></script>
 	<script src="js/server.js"></script>
 	<script src="js/titlePage.js"></script>
+	<script src="js/checkCookie.js"></script>
 </body>
 </html>
