--- a/часы/index.html
+++ b/часы/index.html
@@ -12,23 +12,23 @@
 		<a href="#analog" class="header__link analog">Analog</a>
 		<a href="#settings" class="header__link settings">Settings</a>
 	</header>
-	<section class="settings-block">
+	<section class="global-container settings-block">
 		
 		<!-- КОНТЕЙНЕР ДЛЯ НАСТРОЕК -->
 
 	</section>
-	<section class="time">
+	<section class="global-container time">
 
 		<!-- КОНТЕЙНЕР ДЛЯ РАЗМЕТКИ ЧАСОВ -->
 
 	</section>
-	<section class="date">
+	<section class="global-container date">
 		
 		<!-- КОНТЕЙНЕР ДЛЯ ДАТЫ И ДНЯ НЕДЕЛИ -->
 
 	</section>
 
-	<section class="about">
+	<section class="global-container about">
 		
 		<!-- КОНТЕЙНЕР ДЛЯ ИНФОРМАЦИИ -->
 
